create markdown helper

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h3><%= @post.title %> </h3>
-      <p><%= @post.content_raw %> </p>
+      <p style="white-space: pre-wrap;"><%= @post.content_raw %> </p>
     </div>
   </div>
   <div class="row">
