--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,22 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
       <h1>Blog Title</h1>
       <p>tagline</p>
     </div>
   </div>
+  <% @posts.each do |post| %>
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-md offset-3">
+      <%= link_to post.title, post %>
+      <%= strip_tags(post.content_html) if post.content_html.present? %>
+      <% if policy(post).edit? %>
+        <%= link_to 'Edit', edit_post_path(post) %>
+      <% end %>
+      <% if policy(post).destroy? %>
+        <%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?'} %>
+      <% end %>
+    </div>
+  </div>
+  <% end %>
 </div>
