--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,8 +16,12 @@
         <td><p><%= post.content_raw[0..30] %>...</p></td>
         <td><%= post.created_at.strftime("%m/%d/%Y at %I:%M%p") %></td>
         <td><%= link_to 'View', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?'} %></td>
+          <% if policy(post).edit? %>
+           <td><%= link_to 'Edit', edit_post_path(post) %></td>
+          <% end %>
+          <% if policy(post).destroy? %>
+            <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?'} %></td>
+          <% end %>
       </tr>
       <% end %>
 
