--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,9 @@
 
       <!-- Links when logged in -->
       <%= link_to "My Posts", posts_path, class: "navbar--item navbar--link" %>
-      <%= link_to "Create Post", new_post_path, class: "navbar--item navbar--link" %>
+      <% if policy(Post).new? %>
+        <%= link_to "Create Post", new_post_path, class: "navbar--item navbar--link" %>
+      <% end %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar--item">
