--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,11 +9,19 @@
     <div class="col-md-6 col-md-offset-3">
       <p>Posted at <%= @post.created_at.strftime("%m/%d/%Y at %I:%M%p") %></p>
       <button type="button" class="btn btn-outline-primary">
-        <%= link_to 'Back to Posts', posts_path %></button>
-      <button type="button" class="btn btn-outline-primary">
-        <%= link_to 'Edit Post', edit_post_path %></button>
-      <button type="button" class="btn btn-outline-danger"><%= link_to 'Delete Article', post_path(@post), method: 'delete', data: { confirm: "Are you sure?" } %> </button>
+        <%= link_to 'Back to Posts', root_path %></button>
+      <% if current_user&.admin? %>
+        <% if policy(@post).edit? %>
+          <button type="button" class="btn btn-outline-primary">
+          <%= link_to 'Edit Post', edit_post_path %></button>
+        <% end %>
+        <% if policy(@post).destroy? %>
+          <button type="button" class="btn btn-outline-danger"><%= link_to 'Delete Article', post_path(@post), method: 'delete', data: { confirm: "Are you sure?" } %> </button>
+          <% end %>
+      <% end %>
     </div>
   </div>
 </div>
+
+
 
