--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,9 +10,8 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "My Posts", posts_path, class: "navbar--item navbar--link" %>
       <% if policy(Post).new? %>
-        <%= link_to "Create Post", new_post_path, class: "navbar--item navbar--link" %>
+        <%= link_to ('<i class="fas fa-pencil-alt"></i> Create Post').html_safe, new_post_path, class: "navbar--item navbar--link" %>
       <% end %>
 
       <!-- Avatar with dropdown menu -->
@@ -21,13 +20,13 @@
           <%= image_tag "https://picsum.photos/200/?random", class: "avatar dropdown-toggle", id: "navbar--menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar--dropdown-menu">
             <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+              <%= link_to posts_path do %>
+                <i class="fas fa-book-open"></i> <%= t(".profile", default: "My Posts") %>
               <% end %>
             </li>
             <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
+              <%= link_to edit_user_registration_path do %>
+                <i class="fas fa-user-cog"></i>  <%= t(".settings", default: "Settings") %>
               <% end %>
             </li>
             <li>
