add kaminari for pagination

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,5 +39,8 @@
       </ul>
       <% end %>
     </div>
+    <div class="text-center">
+      <%= paginate @posts %>
+    </div>
   </div>
 </div>
