--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar--main">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar--brand" do %>
-    <%= image_tag "https://picsum.photos/200/?random", height: 50 %>
+    <%= image_tag "https://res.cloudinary.com/assortedpicnicants/image/upload/v1542700006/iconfinder_11_-_Harry_Potter_-_Outline_-_Quill_2730123.png", height: 50 %>
   <% end %>
 
   <!-- Right Navigation -->
