--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,10 +1,14 @@
 html {
   position: relative;
   min-height: 100%;
+  margin:0px;
+  padding:0px;
+  width:100%;
 }
 
 body {
   margin-bottom: 60px;
+
 }
 
 .footer {
