--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,10 @@
 // Specific CSS for your home-page
-#home {
+.background-pattern {
   background-image: url('https://res.cloudinary.com/assortedpicnicants/image/upload/v1542695396/full-bloom.png');
   background-repeat: repeat;
   background-attachment: fixed;
+  width: auto;
+  min-height: calc(80vh);
 }
 
 .blog {
