--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,30 +1,35 @@
-<div class="container">
-  <table>
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Content</th>
-        <th>Created at</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
+<div class="posts-dashboard some-margin-top some-margin-bottom">
 
-    <tbody>
-      <% @posts.each do |post| %>
-      <tr>
-        <td><%= link_to post.title, post_path(post) %></td>
-        <td><p><%= post.content_raw[0..30] %>...</p></td>
-        <td><%= post.created_at.strftime("%m/%d/%Y at %I:%M%p") %></td>
-        <td><%= link_to 'View', post %></td>
-          <% if policy(post).edit? %>
-           <td><%= link_to 'Edit', edit_post_path(post) %></td>
-          <% end %>
-          <% if policy(post).destroy? %>
-            <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?'} %></td>
-          <% end %>
-      </tr>
-      <% end %>
+  <div class="container">
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Content</th>
+          <th>Created at</th>
+          <th class="text-center"><i class="far fa-eye"></i></th>
+          <th class="text-center"><i class="far fa-edit"></i></th>
+          <th class="text-center"><i class="far fa-trash-alt"></i></th>
+        </tr>
+      </thead>
 
-    </tbody>
-  </table>
+      <tbody>
+        <% @posts.each do |post| %>
+        <tr>
+          <td><%= link_to post.title, post_path(post) %></td>
+          <td><p><%= post.content_raw[0..30] %>...</p></td>
+          <td><%= post.created_at.strftime("%m/%d/%Y at %I:%M%p") %></td>
+          <td><%= link_to 'View', post %></td>
+            <% if policy(post).edit? %>
+             <td><%= link_to 'Edit', edit_post_path(post) %></td>
+            <% end %>
+            <% if policy(post).destroy? %>
+              <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?'} %></td>
+            <% end %>
+        </tr>
+        <% end %>
+
+      </tbody>
+    </table>
+  </div>
 </div>
