--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
       <!-- Avatar with dropdown menu -->
       <div class="navbar--item">
         <div class="dropdown">
-          <%= image_tag "https://picsum.photos/200/?random", class: "avatar dropdown-toggle", id: "navbar--menu", "data-toggle" => "dropdown" %>
+          <%= image_tag "https://res.cloudinary.com/assortedpicnicants/image/upload/v1542704250/iconfinder_user-check_3324924.png", class: "avatar dropdown-toggle", id: "navbar--menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar--dropdown-menu">
             <li>
               <%= link_to posts_path do %>
