--- a/app/assets/stylesheets/components/_posts.scss
+++ b/app/assets/stylesheets/components/_posts.scss
@@ -37,6 +37,9 @@
     margin-left:0px;
     padding-left:0px
   }
+  h1, h2, h3 {
+    margin-top: 0;
+  }
 }
 
 @media screen and (max-width: 900px) {
