--- a/app/views/posts/show_raw.html.erb
+++ b/app/views/posts/show_raw.html.erb
@@ -4,14 +4,7 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="post-show some-margin-top some-margin-bottom">
           <h3 class="some-margin-bottom"><%= @post.title %> </h3>
-          <p><%= @post.user.username %></p>
-          <% if @post.content_html.present? %>
-            <p>
-              <%= @post.content_html.html_safe  %>
-            <% else %>
-              Our gnomes are currently parsing this awesome post content. Please come back later or check the raw version
-              <%= link_to "<<here>>", post_raw_path(@post) %></p>
-            <% end %>
+          <p style="white-space: pre-wrap;"><%= @post.content_raw %> </p>
         </div>
       </div>
     </div>
@@ -20,7 +13,7 @@
         <p class="some-margin-bottom text-center" style="font-family: 'georgia';">Posted in<%= @post.created_at.strftime(" %B %d, %Y at %I:%M%p") %></p>
         <div class="action-buttons text-center some-margin-bottom">
         <button type="button" class="btn btn-outline-primary">
-          <%= link_to 'Back to Posts', root_path %></button>
+        <%= link_to 'Back to Posts', root_path %></button>
         <% if current_user&.admin? %>
           <% if policy(@post).edit? %>
             <button type="button" class="btn btn-outline-primary">
