--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,16 +42,40 @@
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar--item navbar--link" %>
     <% end %>
   </div>
-
+   <% if user_signed_in? %>
   <!-- Dropdown list appearing on mobile only -->
   <div class="navbar--item hidden-md hidden-lg">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar--dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
-      </ul>
+        <ul class="dropdown-menu dropdown-menu-right navbar--dropdown-menu">
+          <li>
+            <% if policy(Post).new? %>
+              <%= link_to ('<i class="fas fa-pencil-alt"></i> Create Post').html_safe, new_post_path, class: "navbar--item navbar--link" %>
+            <% end %>
+          </li>
+
+          <li>
+            <%= link_to posts_path do %>
+              <i class="fas fa-book-open"></i> <%= t(".profile", default: "My Posts") %>
+            <% end %>
+          </li>
+
+          <li>
+            <%= link_to edit_user_registration_path do %>
+              <i class="fas fa-user-cog"></i>  <%= t(".settings", default: "Settings") %>
+            <% end %>
+          </li>
+
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+            <% end %>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
+  <% else %>
+      <!-- Login link (when logged out) -->
+    <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar--item navbar--link hidden-md hidden-lg" %>
+  <% end %>
 </div>
