--- a/app/assets/stylesheets/components/_posts.scss
+++ b/app/assets/stylesheets/components/_posts.scss
@@ -22,9 +22,6 @@
 }
 
 .post-content {
-  // position: absolute;
-  // left: 0;
-  // top: 0;
   color: #535353;
   background-color: #fff;
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
@@ -33,6 +30,7 @@
   padding-left: 25px;
   padding-right: 25px;
   padding-bottom: 15px;
+  margin-bottom: 100px;
   ul {
     margin-left:0px;
     padding-left:0px
