--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,13 +3,14 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6 col-md-offset-3">
-        <h1 class="blog-title">The Best Blog There Ever Was</h1>
+        <h1 class="blog-title">The Best Blog Ever</h1>
         <p class="blog-description">An awesome markdown blog!</p>
       </div>
     </div>
   </header>
     <div id="posts">
-      <% @posts.each do |post| %>
+    <% @posts.each do |post| %>
+      <% if post.content_html.present? %>
       <ul class="post-content">
         <li class="content">
           <ul class="post">
@@ -17,17 +18,13 @@
               <h3 class="post-title"><%= link_to post.title, post %></h3>
             </li>
             <li class="text-body">
-              <% if post.content_html.present?  %>
                <p> <%= post.content_html.html_safe %></p>
-              <% else %>
-                <p style="white-space: pre-wrap"><%= post.content_raw %></p>
-              <% end %>
             </li>
           </ul>
         </li>
         <ul class="post-info post-control opacity-transition">
           <li class="post-date">
-            <p><%= post.created_at.strftime("%B %m, %Y") %></p>
+            <p><%= post.created_at.strftime("%B %m, %Y")%> | <%= post.user.username if post.user.username.present? %>
           </li>
           <li class="post-actions">
             <% if current_user&.admin? || user_signed_in? %>
@@ -42,6 +39,7 @@
         </ul>
       </ul>
       <% end %>
+    <% end %>
     </div>
     <div class="text-center">
       <%= paginate @posts %>
