--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,24 +1,29 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <h1>Edit Post</h1>
-      <%= simple_form_for @post do |f| %>
-      <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: "form-control" %>
+<div class="background-pattern">
+  <div class="form-post">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+          <h1>Edit Post</h1>
+          <%= simple_form_for @post do |f| %>
+          <div class="form-group">
+            <%= f.label :title %>
+            <%= f.text_field :title, class: "form-control" %>
+          </div>
+          <div class="form-group content">
+            <%= f.label :content %>
+            <%= f.text_area :content_raw, class: "form-control"%>
+          </div>
+          <%= f.submit :submit, class: 'btn btn-success' %>
+          <% end %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3">
+            <button type="button" class="btn btn-outline-white">
+            <%= link_to 'Back to Posts', posts_path %></button>
+          <button type="button" class="btn btn-outline-danger"><%= link_to 'Delete Article', post_path(@post), method: 'delete', data: { confirm: "Are you sure?" } %> </button>
+        </div>
       </div>
-      <div class="form-group">
-        <%= f.label :content %>
-        <%= f.text_area :content_raw, class: "form-control"%>
-      </div>
-      <%= f.submit :submit, class: 'btn btn-success' %>
-      <% end %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <button type="button" class="btn btn-outline-primary">
-        <%= link_to 'Back to Posts', posts_path %></button>
-      <button type="button" class="btn btn-outline-danger"><%= link_to 'Delete Article', post_path(@post), method: 'delete', data: { confirm: "Are you sure?" } %> </button>
     </div>
   </div>
+</div>
