--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,8 @@
 <div class="background-pattern">
-
   <div class="form-post">
-
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
         <h1>New Post</h1>
         <%= simple_form_for @post do |f| %>
         <div class="form-group">
@@ -27,6 +25,4 @@
       </div>
     </div>
   </div>
-
-
 </div>
