--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
              <p><%= @post.content_raw %></p>
              <br>
              <br>
-             <em>Notice: Our hardworking gnomes are currently parsing this awesome post content. Please come back soon </em>😅
+             <em>Notice: Our hardworking gnomes are currently parsing this awesome post content and will be done in a jiffy.</em>😅
             <% end %>
         </div>
       </div>
