--- a/app/assets/stylesheets/layouts/_posts-dashboard.scss
+++ b/app/assets/stylesheets/layouts/_posts-dashboard.scss
@@ -50,6 +50,7 @@ only screen and (max-width: 760px),
   td:nth-of-type(1):before { content: "Title"; }
   td:nth-of-type(2):before { content: "Content"; }
   td:nth-of-type(3):before { content: "Created at"; }
+  td:nth-of-type(4):before { content: "Status"; }
 
 
 }
