--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
              <p><%= @post.content_raw %></p>
              <br>
              <br>
-             <em>Notice: Our hardworking gnomes are currently parsing this awesome post content and will be done in a jiffy.</em>😅
+             <em><p style="font-size: 12px;"><%= image_tag 'https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif', style: "width:auto;height:80px;" %>Loading HTML version. Check your dashboard for the status</p></em>
             <% end %>
         </div>
       </div>
