--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="footer-links">
     <a href="https://github.com/erikadesu"><i class="fab fa-github"></i></a>
-    <a href="https://linkedin.com/erika-k"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/lerikal/"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
     <p>Made with <i class="fas fa-heart"></i> by Erika</p>
